hphp/test/slow/reified-generics/function-2.php.expectf
Catchable fatal error: Argument 1 passed to c() must be an instance of C<(function (): int)>, C<(function():string)> given in %s on line 10
